--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -100,7 +100,6 @@ a {
 
 .section1 {
   width: 100%;
-  height: 430px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -110,8 +109,7 @@ a {
   padding: 60px 142px 60px 141px;
   display: flex;
   gap: 40px;
-  margin-bottom: 80px;
-  margin-top: 70px;
+  margin-bottom: 20px;
 }
 
 .contentsection1 img {
@@ -148,12 +146,12 @@ a {
 }
 
 .section2 {
-  margin-right: 136px;
-  margin-left: 136px;
+  margin-right: 80px;
+  margin-left: 80px;
 }
 
-.section2 h1{
-  color:  #131C45;
+.section2 h1 {
+  color: #131c45;
   margin-bottom: 60px;
   font-size: 48px;
   text-align: center;
@@ -163,27 +161,28 @@ a {
   display: flex;
   gap: 36px;
   justify-content: center;
-  align-items: center;
+  flex-wrap: wrap;
 }
 
 .card {
-max-width: 265px;
-min-height: 200px;
+  max-width: 265px;
+  min-height: 200px;
+  flex: none;
 }
 
 .card p {
-  color: #9D9D9D;
+  color: #9d9d9d;
   text-align: justify;
 }
 
-.card h2{
+.card h2 {
   margin-top: 15px;
   margin-bottom: 15px;
-  color: #131C45;
+  color: #131c45;
   text-align: center;
 }
 
-.card img{
+.card img {
   border-radius: 10px;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
@@ -197,7 +196,6 @@ min-height: 200px;
 
 .section3 {
   height: auto;
-  margin-top: 40px;
   margin-bottom: 80px;
 }
 
@@ -213,9 +211,27 @@ footer {
   align-items: center;
   margin-top: auto;
   color: white;
-  position: fixed;
   left: 0;
   bottom: 0;
   width: 100%;
 }
 
+@media (max-width: 1200px) {
+  .banner {
+    padding: 30px;
+  }
+
+  .section2 {
+    margin-right: 20px;
+    margin-left: 20px;
+  }
+
+  .contentsection1 {
+    flex-direction: column;
+  }
+
+  .contentsection1 img {
+    width: 95%;
+    height: auto;
+  }
+}
