--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,12 +11,6 @@ body {
   background: #fff;
 }
 
-header nav {
-  color: white;
-  display: flex;
-  font-size: 24px;
-}
-
 a {
   color: white;
   font-size: 24px;
@@ -24,17 +18,25 @@ a {
 
 .header {
   background-color: #131c45;
-  width: 100%;
   max-height: 100px;
   min-height: 90px;
   display: flex;
   align-items: center;
-  justify-content: space-between;
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
   right: 0;
   z-index: 1000;
+}
+
+header nav {
+  color: white;
+  display: flex;
+  font-size: 24px;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  padding-right: 10%;
 }
 
 .logo-branca {
@@ -219,6 +221,7 @@ footer {
 @media (max-width: 1200px) {
   .banner {
     padding: 30px;
+    max-height: 850px;
   }
 
   .section2 {
@@ -228,10 +231,20 @@ footer {
 
   .contentsection1 {
     flex-direction: column;
+    padding: 30px;
   }
 
   .contentsection1 img {
-    width: 95%;
+    width: 100%;
     height: auto;
+  }
+
+  .text1 {
+    padding: 30px;
+    width: 100%;
+  }
+
+  .text1 h2 {
+    font-size: 48px;
   }
 }
