--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -248,3 +248,12 @@ footer {
     font-size: 48px;
   }
 }
+
+/* página de resultado */
+
+.navbar{
+  width: 100%;
+  display: flex;
+  justify-content: right;
+ 
+}
