--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -191,7 +191,7 @@ header nav {
 
 .btnclass2 {
   background: #3870a1;
-  width: 80%;
+  width: 450px;
   margin: 0 auto;
   align-items: center;
 }
@@ -229,6 +229,11 @@ footer {
     margin-left: 20px;
   }
 
+  .btnclass2 {
+    width: 100%;
+    padding: 0 16px;
+  }
+
   .contentsection1 {
     flex-direction: column;
     padding: 30px;
@@ -251,9 +256,197 @@ footer {
 
 /* página de resultado */
 
-.navbar{
+.navbar {
   width: 100%;
   display: flex;
   justify-content: right;
- 
+}
+
+.section4 {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 100px;
+}
+
+.contentsection4 {
+  padding: 60px 142px 60px 141px;
+  display: flex;
+  gap: 40px;
+  margin-bottom: 20px;
+}
+
+.contentsection4 img {
+  width: 566px;
+  height: 310px;
+  border-radius: 10px;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+}
+
+.section4text {
+  max-width: 566px;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+}
+
+.section4text h1 {
+  width: 100%;
+  margin-bottom: 40px;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 48px;
+  line-height: 50px;
+  text-align: left;
+  color: #131c45;
+}
+
+.section4text p {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 29px;
+  text-align: justify;
+  color: #9d9d9d;
+}
+
+.section5 {
+  width: 100%;
+  display: flex;
+  gap: 40px;
+  padding-bottom: 80px;
+  justify-content: center;
+  align-items: center;
+}
+
+.btnsection5 {
+  width: 450px;
+  border-radius: 5px;
+  border: none;
+  height: 90px;
+  margin-top: 40px;
+  background: #3870a1;
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 48px;
+  color: #f4f2f2;
+  transition: background 0.2s;
+}
+
+.btnsection5:hover {
+  background: #00a3d8;
+}
+
+.section6 {
+  width: 100%;
+  color: #131c45;
+  margin-bottom: 80px;
+  justify-content: center;
+  text-align: center;
+}
+
+.section7 {
+  color: #9d9d9d;
+  width: 100%;
+  margin-bottom: 40px;
+  padding: 0 142px;
+  line-height: 24 px;
+  text-align: left;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.content7 {
+  width: 100%;
+  max-width: 1170px;
+}
+
+.section8 {
+  margin-right: 80px;
+  margin-left: 80px;
+}
+
+.section8 h2 {
+  color: #9d9d9d;
+  margin-bottom: 15px;
+  font-size: 48px;
+  line-height: 50px;
+  text-align: center;
+}
+
+.contentsection8 {
+  width: 100%;
+  display: flex;
+  gap: 36px;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.card8 {
+  max-width: 265px;
+  min-height: 200px;
+  margin-bottom: 40px;
+  flex: none;
+}
+
+.card8 p {
+  color: #9d9d9d;
+  text-align: justify;
+}
+
+.card8 h2 {
+  margin-top: 15px;
+  margin-bottom: 15px;
+  color: #9d9d9d;
+  text-align: center;
+}
+
+.card8 img {
+  width: 250px;
+  height: 250px;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+}
+
+@media (max-width: 1200px) {
+  /* .section4 {
+    margin-right: 20px;
+    margin-left: 20px;
+  } */
+
+  .section5 {
+    flex-direction: column;
+    padding: 0 30px;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    width: 100%;
+  }
+
+  .section7 {
+    padding: 0 30px;
+  }
+
+  .section5 a{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+  }
+
+  .btnsection5 {
+    margin-top: 0px;
+    width: 90%;
+  }
+
+  .contentsection4 {
+    flex-direction: column;
+    padding: 30px;
+  }
+
+  .contentsection4 img {
+    width: 100%;
+    height: auto;
+  }
 }
