--- a/style-vocacional2.css
+++ b/style-vocacional2.css
@@ -39,11 +39,10 @@ header nav {
   padding-right: 10%;
 }
 
-.navbar{
+.navbar {
   width: 100%;
   display: flex;
   justify-content: right;
- 
 }
 
 .logo-branca {
@@ -56,64 +55,71 @@ header nav {
 }
 
 .section1 {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding-top: 100px;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-top: 100px;
 }
-  
-.contentsection1 {
-    padding: 60px 142px 60px 141px;
-    display: flex;
-    gap: 40px;
-}
-  
-.contentsection1 img {
-    width: 566px;
-    height: 310px;
-    border-radius: 10px;
-    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
-}
-  
-.section1text {
-    max-width: 566px;
-    align-items: left;
-    display: flex;
-    flex-direction: column;
-}
-  
-.section1text h1 {
-    margin-bottom: 20px;
-    margin-top: 70px;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 48px;
-    line-height: 45px;
-    text-align: left;
-    color: #131c45;
 
+.contentsection1 {
+  padding: 60px 142px 60px 141px;
+  display: flex;
+  gap: 40px;
 }
-  
+
+.contentsection1 img {
+  width: 566px;
+  height: 310px;
+  border-radius: 10px;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+}
+
+.section1text {
+  max-width: 566px;
+  align-items: left;
+  display: flex;
+  flex-direction: column;
+}
+
+.section1text h1 {
+  margin-bottom: 20px;
+  margin-top: 70px;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 48px;
+  line-height: 45px;
+  text-align: left;
+  color: #131c45;
+}
+
 .section1text p {
-    font-style: normal;
-    font-weight: 500;
-    font-size: 24px;
-    line-height: 29px;
-    text-align: justify;
-    color: #9d9d9d;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 29px;
+  text-align: justify;
+  color: #9d9d9d;
 }
 
 .container2 {
   width: 100%;
+  max-width: 1171px;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
+.section2 {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0 142px;
+}
+
 .section2text {
   width: 100%;
-  max-width: 1000px;
   align-items: left;
   display: flex;
   flex-direction: column;
@@ -149,6 +155,7 @@ header nav {
 }
 
 .contentsection3 {
+  max-width: 1170px;
   display: flex;
   gap: 36px;
   justify-content: center;
@@ -199,44 +206,49 @@ header nav {
   width: 80%;
   margin: 0 auto;
   align-items: center;
+  max-width: 450px;
+  margin-bottom: 80px;
 }
 
 .btnclass2:hover {
   background: #15467e;
 }
 
-
-footer {
-    height: 100px;
-    background: #131c45;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: auto;
-    color: white;
-    left: 0;
-    bottom: 0;
-    width: 100%;
+.form-control div p:first-child {
+  color: #131c45 ;
+  font-weight: 500;
 }
 
+footer {
+  height: 100px;
+  background: #131c45;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: auto;
+  color: white;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+}
 
 @media (max-width: 1200px) {
-    .contentsection1 {
-      flex-direction: column;
-      padding: 30px;
-    }
-  
-    .contentsection1 img {
-      width: 100%;
-      height: auto;
-    }
-  
-    .text1 {
-      padding: 30px;
-      width: 100%;
-    }
-  
-    .text1 h2 {
-      font-size: 48px;
-    }
+  .contentsection1 {
+    flex-direction: column;
+    padding: 30px;
   }
+
+  .contentsection1 img {
+    width: 100%;
+    height: auto;
+  }
+
+  .text1 {
+    padding: 30px;
+    width: 100%;
+  }
+
+  .text1 h2 {
+    font-size: 48px;
+  }
+}
